@@ -25,6 +25,171 @@
 #include "universal-cp-eventtreeview.h"
 #include "universal-cp-gui.h"
 
+static gboolean
+get_selected_row (GtkTreeIter *iter)
+{
+        GtkWidget         *treeview;
+        GtkTreeModel      *model;
+        GtkTreeSelection  *selection;
+
+        treeview = glade_xml_get_widget (glade_xml, "event-treeview");
+        g_assert (treeview != NULL);
+        model = gtk_tree_view_get_model (GTK_TREE_VIEW (treeview));
+        g_assert (model != NULL);
+        selection = gtk_tree_view_get_selection (GTK_TREE_VIEW (treeview));
+        g_assert (selection != NULL);
+
+        return gtk_tree_selection_get_selected (selection, &model, iter);
+}
+
+static void
+setup_event_popup (GtkWidget *popup)
+{
+        GtkWidget *copy_event_menuitem;
+
+        copy_event_menuitem = glade_xml_get_widget (glade_xml,
+                                                    "copy-event-menuitem");
+        g_assert (copy_event_menuitem != NULL);
+
+        /* Only show "Copy Value" menuitem when a row is selected */
+        g_object_set (copy_event_menuitem,
+                      "visible",
+                      get_selected_row (NULL),
+                      NULL);
+}
+
+gboolean
+on_event_treeview_button_release (GtkWidget      *widget,
+                                  GdkEventButton *event,
+                                  gpointer        user_data)
+{
+        GtkWidget *popup;
+
+        if (event->type != GDK_BUTTON_RELEASE ||
+            event->button != 3)
+                return FALSE;
+
+        popup = glade_xml_get_widget (glade_xml, "event-popup");
+        g_assert (popup != NULL);
+
+        setup_event_popup (popup);
+
+        gtk_menu_popup (GTK_MENU (popup),
+                        NULL,
+                        NULL,
+                        NULL,
+                        NULL,
+                        event->button,
+                        event->time);
+        return TRUE;
+}
+
+void
+on_event_treeview_row_activate (GtkMenuItem *menuitem,
+                                gpointer     user_data)
+{
+        GtkClipboard *clipboard;
+        GtkWidget    *treeview;
+        GtkTreeModel *model;
+        GtkTreeIter   iter;
+
+        treeview = glade_xml_get_widget (glade_xml, "event-treeview");
+        g_assert (treeview != NULL);
+        model = gtk_tree_view_get_model (GTK_TREE_VIEW (treeview));
+        g_assert (model != NULL);
+        clipboard = gtk_clipboard_get (GDK_SELECTION_CLIPBOARD);
+        g_assert (clipboard != NULL);
+
+        if (get_selected_row (&iter)) {
+                char *fields[4];
+                char *event_str;
+
+                gtk_tree_model_get (model, &iter,
+                                    0, &fields[0],
+                                    1, &fields[1],
+                                    2, &fields[2],
+                                    3, &fields[3], -1);
+                if (G_UNLIKELY (!fields[0] ||
+                                !fields[1] ||
+                                !fields[2] ||
+                                !fields[3]))
+                        return;
+
+                event_str = g_strjoin (" ",
+                                       fields[0],
+                                       fields[1],
+                                       fields[2],
+                                       fields[3], NULL);
+                g_free (fields[0]);
+                g_free (fields[1]);
+                g_free (fields[2]);
+                g_free (fields[3]);
+
+                gtk_clipboard_set_text (clipboard, event_str, -1);
+
+                g_free (event_str);
+        }
+}
+
+void
+on_copy_all_events_activate (GtkMenuItem *menuitem,
+                             gpointer     user_data)
+{
+        GtkClipboard *clipboard;
+        GtkWidget    *treeview;
+        GtkTreeModel *model;
+        GtkTreeIter   iter;
+        char         *copied;
+
+        treeview = glade_xml_get_widget (glade_xml, "event-treeview");
+        g_assert (treeview != NULL);
+        model = gtk_tree_view_get_model (GTK_TREE_VIEW (treeview));
+        g_assert (model != NULL);
+        clipboard = gtk_clipboard_get (GDK_SELECTION_CLIPBOARD);
+        g_assert (clipboard != NULL);
+
+        if (!gtk_tree_model_get_iter_first (model, &iter))
+                return;
+
+        copied = g_strdup ("");
+        do {
+                char *fields[4];
+                char *event_str;
+                char *tmp;
+
+                gtk_tree_model_get (model, &iter,
+                                    0, &fields[0],
+                                    1, &fields[1],
+                                    2, &fields[2],
+                                    3, &fields[3], -1);
+                if (G_UNLIKELY (!fields[0] ||
+                                !fields[1] ||
+                                !fields[2] ||
+                                !fields[3]))
+                        continue;
+
+                event_str = g_strjoin (" ",
+                                       fields[0],
+                                       fields[1],
+                                       fields[2],
+                                       fields[3], NULL);
+                g_free (fields[0]);
+                g_free (fields[1]);
+                g_free (fields[2]);
+                g_free (fields[3]);
+
+                tmp = copied;
+                copied = g_strjoin ("\n", copied, event_str, NULL);
+
+                g_free (tmp);
+                g_free (event_str);
+        } while (gtk_tree_model_iter_next (model, &iter));
+
+        gtk_clipboard_set_text (clipboard, copied, -1);
+
+        g_free (copied);
+}
+
 void
 display_event (const char *notified_at,
                const char *friendly_name,
